k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: hashicorp/http-echo
        args:
          - "-text=Product Service is running"
        ports:
          - containerPort: 5678
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
