k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: hashicorp/http-echo
          args:
            - "-text=Order Service"
          ports:
            - containerPort: 5678
