k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
spec:
  selector:
    app: order
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
