k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 5678
