k8s/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: ecommerce
spec:
  selector:
    app: user
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
